--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
     padding-right: 5%;
     margin-top: 0;
     padding-top: 8vh;
-    height: 100vh;
+    height: 91vh;
     width: 100%;
     background-image: linear-gradient(90deg, #1E7B9D, #400A68);
     display: flex;
@@ -101,14 +101,14 @@ body {
 }
 
 .start-content {
-    margin-top: 20vh;
     text-align: center;
+    width: 100%;
     height: 100%;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
 }
 
 header {
@@ -236,12 +236,12 @@ header {
     position: absolute;
     background-image: url(res/mountains.png);
     width: 35%;
-    height: 46vh;
+    height: 60vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     left: 0;
-    bottom: 0vh;
+    bottom: 0;
 }
 
 #right-tree {
@@ -251,9 +251,9 @@ header {
     height: 30vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     right: 7%;
-    bottom: 3.5vh;
+    bottom: 0;
 }
 
 #kodamic {
@@ -263,20 +263,20 @@ header {
     height: 30vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     left: 7%;
-    bottom: 3vh;
+    bottom: 0;
 }
 
 #ground {
-    position: absolute;
-    bottom: 0;
+    position: relative;
     width: 100%;
     background-image: url(res/ground.png);
-    height: 10vh;
+    height: 9vh;
+    bottom: 0;
     background-repeat: no-repeat;
     background-position: bottom;
-    background-size: contain;
+    background-size: cover;
 }
 
 #left-cloud {
@@ -318,9 +318,9 @@ header {
     height: 27vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     right: 30%;
-    bottom: 2vh;
+    bottom: 0vh;
 }
 
 #hearts {
@@ -1167,6 +1167,10 @@ footer a:hover {
         background-repeat: no-repeat;
     }
 
+    #ground {
+        height: 3vh;
+    }
+
     #submit-app-photo {
         width: 30vw;
     }
@@ -1293,12 +1297,20 @@ footer a:hover {
         font-size: 6vw;
     }
 
-
-
     #questions-content h2 {
         font-size: 6vw;
         text-align: center;
     }
+
+    #stars {
+        top: 2vh;
+    }
+
+    #hearts {
+        top: 2vh;
+    }
+
+    
 }
 
 @media screen and (min-width: 601px) {
