--- a/style.css
+++ b/style.css
@@ -797,9 +797,10 @@ header {
     align-items: center;
     width: 80%;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 1.7vw;
     background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+    border: 2px solid #FFC75C;
 }
 
 #submit-app-form {
@@ -1127,6 +1128,107 @@ footer a:hover {
 }
 
 @media screen and (max-width: 600px) {
+
+    #square1 {
+        width: 10px;
+        height: 10px;
+    }
+    
+    #square2 {
+        width: 15px;
+        height: 15px;
+    }
+    
+    #square3 {
+        width: 13px;
+        height: 13px;
+    }
+    
+    #square4 {
+        width: 17px;
+        height: 17px;
+    }
+    
+    #square5 {
+        width: 20px;
+        height: 20px;
+    }
+    
+    #square6 {
+        width: 12px;
+        height: 12px;
+    }
+    
+    #square7 {
+        width: 18px;
+        height: 18px;
+    }
+    
+    #square8 {
+        width: 12px;
+        height: 12px;
+    }
+    
+    #square9 {
+        width: 18px;
+        height: 18px;
+    }
+    
+    #square10 {
+        width: 20px;
+        height: 20px;
+    }
+    
+    #square11 {
+        width: 17px;
+        height: 17px;
+    }
+    
+    #square12 {
+        width: 13px;
+        height: 13px;
+    }
+    
+    #square13 {
+        width: 19px;
+        height: 19px;
+    }
+    
+    #square14 {
+        width: 16px;
+        height: 16px;
+    }
+    
+    #square15 {
+        width: 16px;
+        height: 16px;
+    }
+    
+    #square16 {
+        width: 19px;
+        height: 19px;
+    }
+    
+    #square17 {
+        width: 16px;
+        height: 16px;
+    }
+    
+    #square18 {
+        width: 7px;
+        height: 7px;
+    }
+    
+    #square19 {
+        width: 10px;
+        height: 10px;
+    }
+    
+    #square20 {
+        width: 15px;
+        height: 15px;
+    }
+
     header {
         display: flex;
         flex-direction: row;
@@ -1310,7 +1412,13 @@ footer a:hover {
         top: 2vh;
     }
 
-    
+    #guide-school-section {
+        height: 30vh;
+    }
+
+    #guide-school-content {
+        
+    }
 }
 
 @media screen and (min-width: 601px) {
