--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-weight: 100;
 }
 
 body {
@@ -685,6 +686,7 @@ header {
 #questions-section {
     width: 100%;
     min-height: 110vh;
+    padding-bottom: 10vh;
     height: auto;
     position: relative;
     overflow: hidden;
@@ -1133,97 +1135,97 @@ footer a:hover {
         width: 10px;
         height: 10px;
     }
-    
+
     #square2 {
         width: 15px;
         height: 15px;
     }
-    
+
     #square3 {
         width: 13px;
         height: 13px;
     }
-    
+
     #square4 {
         width: 17px;
         height: 17px;
     }
-    
+
     #square5 {
         width: 20px;
         height: 20px;
     }
-    
+
     #square6 {
         width: 12px;
         height: 12px;
     }
-    
+
     #square7 {
         width: 18px;
         height: 18px;
     }
-    
+
     #square8 {
         width: 12px;
         height: 12px;
     }
-    
+
     #square9 {
         width: 18px;
         height: 18px;
     }
-    
+
     #square10 {
         width: 20px;
         height: 20px;
     }
-    
+
     #square11 {
         width: 17px;
         height: 17px;
     }
-    
+
     #square12 {
         width: 13px;
         height: 13px;
     }
-    
+
     #square13 {
         width: 19px;
         height: 19px;
     }
-    
+
     #square14 {
         width: 16px;
         height: 16px;
     }
-    
+
     #square15 {
         width: 16px;
         height: 16px;
     }
-    
+
     #square16 {
         width: 19px;
         height: 19px;
     }
-    
+
     #square17 {
         width: 16px;
         height: 16px;
     }
-    
+
     #square18 {
         width: 7px;
         height: 7px;
     }
-    
+
     #square19 {
         width: 10px;
         height: 10px;
     }
-    
+
     #square20 {
         width: 15px;
         height: 15px;
@@ -1295,7 +1297,8 @@ footer a:hover {
     }
 
     #top-decor-faq {
-        margin-top: -1px;
+        margin-top: -0.8vh;
+        z-index: 0;
         height: 7vh;
         background-size: cover;
     }
@@ -1328,6 +1331,7 @@ footer a:hover {
     .left p {
         font-size: 4vw;
         color: #333;
+        text-align: justify;
     }
 
     .right {
@@ -1337,6 +1341,15 @@ footer a:hover {
     .right img {
         width: 100%;
         margin-top: 10vh;
+    }
+
+    #fabs {
+        width: 70%;
+        margin-top: 3vh;
+    }
+
+    #questions-section {
+        min-height: 80vh;
     }
 
     #between-decor-purple {
@@ -1413,11 +1426,11 @@ footer a:hover {
     }
 
     #guide-school-section {
-        height: 30vh;
+        height: 35vh;
     }
 
-    #guide-school-content {
-        
+    #guide-school-content h3 {
+        font-size: 5vw;
     }
 
     #start-section h2 {
@@ -1461,9 +1474,34 @@ footer a:hover {
         top: 10vh;
         z-index: 0;
     }
-    
+
     #right-cloud {
         width: 35%;
+    }
+
+    .bottom-decor-faq {
+        height: 20vh;
+    }
+
+    .bottom-decor-faq-bg {
+        height: 3vh;
+    }
+
+    .bottom-decor-faq-bg-transparent {
+        height: 10vh;
+    }
+
+    .courses-content {
+        padding-top: 10vh;
+        padding-bottom: 0;
+    }
+
+    #guide-school-video {
+        width: 90%;
+        height: 71%;
+        border: #E769E4 3px solid;
+        border-radius: 7px;
+        z-index: 1;
     }
 }
 
