--- a/templates/start_section.html
+++ b/templates/start_section.html
@@ -13,11 +13,11 @@
             K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
                 class="blue-letter">M</span>A
         </h1>
-        <img id="main-btn" src="{{ url_for('root', path='./res/start_red_btn.png') }}">
+        <img id="main-btn" src="{{ url_for('static', path='/icon/start_red_btn.png') }}">
 
         <div id="select-course">
             <a href="#courses-section" id="select-course-btn-link">
-                <img id="select-course-btn" src="{{ url_for('root', path='./res/select_course_btn.png') }}">
+                <img id="select-course-btn" src="{{ url_for('static', path='/icon/select_course_btn.png') }}">
             </a>
         </div>
     </div>
