--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap);
+@import url(desktop-squares.css);
 
 @font-face {
     font-family: 'SuperMario';
@@ -927,146 +928,6 @@ footer a:hover {
     position: absolute;
     background-color: #E769E4;
     z-index: 0;
-}
-
-#square1 {
-    top: 10%;
-    left: 10%;
-    width: 20px;
-    height: 20px;
-}
-
-#square2 {
-    bottom: 55%;
-    left: 15%;
-    width: 25px;
-    height: 25px;
-}
-
-#square3 {
-    bottom: 5%;
-    left: 10%;
-    width: 30px;
-    height: 30px;
-}
-
-#square4 {
-    top: 85%;
-    left: 95%;
-    width: 35px;
-    height: 35px;
-}
-
-#square5 {
-    top: 75%;
-    left: 88%;
-    width: 40px;
-    height: 40px;
-}
-
-#square6 {
-    top: 15%;
-    left: 75%;
-    width: 22px;
-    height: 22px;
-}
-
-#square7 {
-    top: 30%;
-    left: 90%;
-    width: 28px;
-    height: 28px;
-}
-
-#square8 {
-    top: 45%;
-    left: 5%;
-    width: 32px;
-    height: 32px;
-}
-
-#square9 {
-    bottom: 30%;
-    left: 5%;
-    width: 18px;
-    height: 18px;
-}
-
-#square10 {
-    bottom: 5%;
-    left: 3%;
-    width: 23px;
-    height: 23px;
-}
-
-#square11 {
-    top: 10%;
-    left: 50%;
-    width: 27px;
-    height: 27px;
-}
-
-#square12 {
-    top: 25%;
-    left: 65%;
-    width: 33px;
-    height: 33px;
-}
-
-#square13 {
-    top: 40%;
-    left: 80%;
-    width: 19px;
-    height: 19px;
-}
-
-#square14 {
-    top: 55%;
-    left: 95%;
-    width: 21px;
-    height: 21px;
-}
-
-#square15 {
-    top: 15%;
-    left: 15%;
-    width: 26px;
-    height: 26px;
-}
-
-#square16 {
-    top: 30%;
-    left: 30%;
-    width: 29px;
-    height: 29px;
-}
-
-#square17 {
-    bottom: 0%;
-    left: 85%;
-    width: 36px;
-    height: 36px;
-}
-
-#square18 {
-    top: 65%;
-    left: 87%;
-    width: 39px;
-    height: 39px;
-}
-
-#square19 {
-    top: 75%;
-    left: 85%;
-    width: 24px;
-    height: 24px;
-}
-
-#square20 {
-    top: 20%;
-    left: 85%;
-    width: 31px;
-    height: 31px;
 }
 
 @keyframes float {
